# automation-framework-example

./: .env.example  .gitignore  README.md  behave.ini  environment.py  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/skills/: add-api-endpoint.md  add-page-object.md  brief.md  create-test.md  debug-test.md  decide.md  fix-selectors.md  memory.md  review-tests.md  review.md  route.md  run-tests.md  setup-environment.md
.github/workflows/: tests.yml
checklists/: framework_review.md  page_object_review.md  service_review.md  test_review.md
core/: __init__.py  api_client.py  browser_factory.py  config.py  logger.py  response_validator.py
docs/: CODEX_REVIEW.md  HANDOFF.md  api-flow.md  architecture.md  decision_log.md  ui-flow.md
docs/briefs/: mcp-test-runner-handoff.md  mcp-test-runner.md
factories/: __init__.py  booking_builder.py  guest_builder.py  room_builder.py
features/api/: auth.feature  bookings.feature
features/ui/: admin.feature  booking.feature  home.feature
mcp_server/: MCP_TEST_RUNNER_DESIGN.md  README.md  __init__.py  data_factory_implementation.md  data_factory_server.py  mcp_examples_planning.md  test_runner_server.py
pages/: __init__.py  admin_page.py  base_page.py  booking_page.py  home_page.py
services/: __init__.py  auth_service.py  booking_service.py  room_service.py
steps/: __init__.py  api_steps.py  common_steps.py  ui_steps.py
