[project]
name = "automation-framework-example"
version = "1.0.0"
description = "BDD Test Automation Framework with Python, Behave, and Playwright"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Gregory Blacketter"}
]
keywords = ["testing", "automation", "behave", "playwright", "bdd"]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "flake8",
    "mypy",
]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
